Support five accounts and simultaneous voice joins
